# tukro

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/: deploy.yaml
.github/workflows/: deploy.yaml
apps/communities/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/communities/migrations/: 0001_initial.py
apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_email.py  0003_alter_user_managers.py
communities/: admin.py  models.py  serializers.py  urls.py  views.py
infra/: Dockerrun.aws.json  backend.tf  deploy-bucket.tf  ecr.tf  main.tf  role.tf  variables.tf
tests/users/: test_registration.py
tukro/: asgi.py  settings.py  urls.py  wsgi.py
tukro/settings/: base.py
users/: models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0003_alter_user_managers.py
